examples/syntax-error/src/test.js
define(function(require, exports) {
    var obj = {
        str: 'hello',
        b,2
    }

    exports.say = function() {
        return obj.str
    }
})
